# themeswitch-cli

./: Cargo.toml  conf.pest  config.ron  config.toml  perf.data  perf.data.old  pest_grammer  profile.json  test.conf  theme.toml
src/: conf.rs  main.rs  theme.rs
src/conf/: mod.rs  toml_stuff.rs
src/exec/: mod.rs
src/parser/: mod.rs
src/store/: mod.rs
src/theme/: mod.rs
src/util/: env.rs  mod.rs  path.rs
src/wallpaper/: mod.rs  wpaper.rs
