[package]
name = "themeswitch-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ahash = { version = "0.8.11", features = ["serde"] }
anyhow = "1.0.82"
async-recursion = "1.1.1"
async-trait = "0.1.80"
#bumpalo = "3.16.0"
#bumpalo-herd = "0.1.2"
camino = { version = "1.1.6", features = ["serde"] }
chrono = "0.4.38"
chrono-tz = "0.9.0"
clap = { version = "4.5.3", features = ["derive", "cargo", "env", "string"] }
combine = "4.6.7"
compact_str = "0.7.1"
config = "0.14.0"
dirs = "5.0.1"
dunce = "1.0.4"
etcetera = "0.8.0"
execute = "0.2.13"
fs_extra = "1.3.0"
#hashbrown = { version = "0.14.5", features = ["rayon", "alloc", "serde"] }
home = "0.5.9"
itertools = "0.12.1"
lazy_static = "1.4.0"
log = "0.4.21"
#lexical = "6.1.1"
# libsystemd = "0.7.0"
# log = "0.4.21"
minijinja = "2.0"
# nix = { version = "0.28.0", features = ["socket", "uio", "zerocopy"] }
nom = "7.1.3"
#notify = "6.1.1"
once_cell = "1.19.0"
pest = "2.7.9"
pest-ast = "0.3.4"
pest_derive = "2.7.9"
pom = "3.4.0"
rayon = "1.10.0"
rayon-macro = "0.2.0"
regex = "1.10.4"
ron = "0.8.1"
scopeguard = "1.2.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_bytes = "0.11.14"
serde_json = "1.0.114"
#slab = { version = "0.4.9", features = ["serde"] }
smallvec = "1.13.2"
tailcall = "1.0.1"
tera = "1.19.1"
thiserror = "1.0.59"

tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
try_match = "0.4.1"
#typed-arena = "2.0.2"
typenum = "1.17.0"
# ureq = { version = "2.9.7", features = [
#   "json",
#   "http-crate",
#   "http-interop",
#   "charset",
# ] }
# warp = "0.3.7"
which = "6.0.1"
# zerocopy = { version = "0.7.32", features = ["zerocopy-derive"] }
# zerocopy-derive = "0.7.32"
